test/errors/math_builtins1.input.asm
* = $801

    lda #Math.random()  ; not allowed as it will lead to non-reproducible builds


